* Add "reward_loot" and "reward_loot_count" to Events for rewarding via loot tables. (Justin Jacobs)
* Support hidding the developer console title label. (Justin Jacobs)
* Mod-level default keybinding support added. (Justin Jacobs)
* Improved developer mode with inspection cursor. (Justin Jacobs)

Engine fixes:

* Fixed incorrect render order for some objects; aka "character partly hidden by front of tent". (Justin Jacobs)
* Fix stats/powers not updating when changing equipment in some cases. (Justin Jacobs)
* Prevent auto-equipping items if they would cause existing items to be unequipped. (Justin Jacobs)
* Fix revive effect not being applied when the player has zero HP. (Justin Jacobs)
* Removed unused color key attribute parsing from tileset definitions. (Justin Jacobs)
* Fixed building on FreeBSD. (Justin Jacobs)

Translation updates:

* Spanish (es) update (Eric R)
* Scottish Gaelic (gd) update (GunChleoc)
* Italian (it) update (MOB2)
* Polish (pl) update (Pawonashi)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Ademaro)
* Ukrainian (uk) update (Sergiy Borodych)



Flare v1.04 (http://flarerpg.org/index.php/2018/04/19/flare-1-04/)

Engine fixes:

* Fix a regression that caused book text that was not left-aligned to be cut off. (Justin Jacobs)
* Fix a crash when teleporting to the default position of map with a summoned creature. (Justin Jacobs)

Game changes:

* Fall back to Liberation Sans when fancy fonts lack the appropriate glyphs for the current language. (Justin Jacobs)
* Fixed translation script not grabbing subtitles from soundfx/subtitles.txt. (Justin Jacobs)

Translation updates:

* Scottish Gaelic (gd) update (GunChleoc)
* Portuguese (pt) update (Rui)
* Ukrainian (uk) update (Sergiy Borodych)



Flare v1.03 (http://flarerpg.org/index.php/2018/04/17/flare-1-03/)

Engine features:

* Buttons that trigger Events can now be added to books. (Justin Jacobs)
* Add ability to control image display in books via campaign status. (Justin Jacobs)